--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nebula, Sua Previsão do Tempo</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon-16x16.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/66044f686a.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/Nebula logo.png" alt="">
+            <img src="Nebula logo.png" alt="">
         </div>
         <div class="right-section">
             <nav>
@@ -52,7 +52,7 @@
                             <div class="info-temp">
                                 <div class="temperature">
                                     <div class="flex-top">
-                                        <img src="/img/cloud.png" alt="" id="cloud">
+                                        <img src="cloud.png" alt="" id="cloud">
                                         <div class="data-temp">
                                             <span class="celsius">17°</span>
                                             <span class="sensation">sensação de: <span class="txt-strng">17°</span></span>
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
                                 <span class="data-uv">
-                                    <img src="/img/umbrella.png" alt="precipitação" id="umbrella">
+                                    <img src="umbrella.png" alt="precipitação" id="umbrella">
                                     <span>
                                         <strong>30%</strong>
                                     </span>
@@ -92,7 +92,7 @@
                                 <span class="subtitle-m">22 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -108,7 +108,7 @@
                                 <span class="subtitle-m">23 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -124,7 +124,7 @@
                                 <span class="subtitle-m">24 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -140,7 +140,7 @@
                                 <span class="subtitle-m">25 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -156,7 +156,7 @@
                                 <span class="subtitle-m">26 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -172,7 +172,7 @@
                                 <span class="subtitle-m">27 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
@@ -188,7 +188,7 @@
                                 <span class="subtitle-m">28 ABR.</span>
                                 <span class="prediction col">
                                     <span class="sD-3">
-                                        <img src="/img/cloud.png" alt="cloud">
+                                        <img src="cloud.png" alt="cloud">
                                     </span>
                                 </span>
                                 <span class="temp">
