--- a/videos.html
+++ b/videos.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/Nebula logo.png" alt="">
+            <img src="/Nebula logo.png" alt="">
         </div>
         <div class="right-section">
             <nav>
@@ -72,29 +72,29 @@
         <span>NOTICIAS DOS ULTIMOS DIAS</span>
         <div class="video-card">
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=vGmkOJIcUnI" title="IMPRESSIONANTE: Luzes do norte"> <img src="/img/aurora.jpg" alt="aurora boreal"><span class="description-video">As luzes do norte são
+                <a href="https://www.youtube.com/watch?v=vGmkOJIcUnI" title="IMPRESSIONANTE: Luzes do norte"> <img src="aurora.jpg" alt="aurora boreal"><span class="description-video">As luzes do norte são
                         um feito lindo que apareceu em cameras pela primeira vez na estação espacial
                         internacional</span>
                     </a>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=Tuq4kdoYNrE" title="4 MENTIRAS SOBRE AS MUDANÇAS CLIMATICAS"> <img src="/img/aquecimento global.jpg" alt="Aquecimento"><span class="description-video"> Aquecimento global: 4 afirmações sobre as mudanças climáticas que a ciência desmentiu</span>
+                <a href="https://www.youtube.com/watch?v=Tuq4kdoYNrE" title="4 MENTIRAS SOBRE AS MUDANÇAS CLIMATICAS"> <img src="aquecimento global.jpg" alt="Aquecimento"><span class="description-video"> Aquecimento global: 4 afirmações sobre as mudanças climáticas que a ciência desmentiu</span>
                     </a>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=Mf2cxR9BWa4" title="QUEM É O RESPONSAVEL PELAS MUDANÇAS CLIMATICAS"> <img src="/img/china and us.webp" alt="CHINA AND USA"><span class="description-video">Quem É o Responsável Pelas Mudanças Climáticas? | Quem Precisa Resolver Isso?</span>
+                <a href="https://www.youtube.com/watch?v=Mf2cxR9BWa4" title="QUEM É O RESPONSAVEL PELAS MUDANÇAS CLIMATICAS"> <img src="china and us.webp" alt="CHINA AND USA"><span class="description-video">Quem É o Responsável Pelas Mudanças Climáticas? | Quem Precisa Resolver Isso?</span>
                     </a>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=OfO6zxvhtBg" title="IMPRESSIONANTE: Antartica visto por outros olhos"> <img src="/img/antartica.jpg" alt="Antartica"><span class="description-video">MALUQUISSE: Video mostra como é a antartica de perto, veja agora mesmo o nosso polo sul como nunca viu</span>
+                <a href="https://www.youtube.com/watch?v=OfO6zxvhtBg" title="IMPRESSIONANTE: Antartica visto por outros olhos"> <img src="antartica.jpg" alt="Antartica"><span class="description-video">MALUQUISSE: Video mostra como é a antartica de perto, veja agora mesmo o nosso polo sul como nunca viu</span>
                     </a>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=q_VhGh-ZA0k" title="COMO É A VIDA NA AMAZONIA"> <img src="/img/AMAZON.webp" alt="Amazonia"><span class="description-video">Documentario mostra como é a vida na amazonia e como a fauna e flora local convivem em harmonia, o pulmão do mundo é mesmo lindo</span>
+                <a href="https://www.youtube.com/watch?v=q_VhGh-ZA0k" title="COMO É A VIDA NA AMAZONIA"> <img src="AMAZON.webp" alt="Amazonia"><span class="description-video">Documentario mostra como é a vida na amazonia e como a fauna e flora local convivem em harmonia, o pulmão do mundo é mesmo lindo</span>
                     </a>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=bFP9fdU1UIQ" title="Lobo terrivel"> <img src="/img/dino.jpg" alt="dinossauro"><span class="description-video">RESSUSCITARAM o PRIMEIRO animal PRÉ-HISTÓRICO? A “DESEXTINÇÃO” finalmente é real, bem vindo de volta amigo </span>
+                <a href="https://www.youtube.com/watch?v=bFP9fdU1UIQ" title="Lobo terrivel"> <img src="dino.jpg" alt="dinossauro"><span class="description-video">RESSUSCITARAM o PRIMEIRO animal PRÉ-HISTÓRICO? A “DESEXTINÇÃO” finalmente é real, bem vindo de volta amigo </span>
                     </a>
             </div>
         </div>
