--- a/videos.html
+++ b/videos.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nebula, Sua Previsão do Tempo</title>
     <link rel="stylesheet" href="video.css">
-    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon-16x16.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/66044f686a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="/Nebula logo.png" alt="">
+            <img src="Nebula logo.png" alt="">
         </div>
         <div class="right-section">
             <nav>
