--- a/crud.html
+++ b/crud.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nebula, Sua Previsão do Tempo</title>
     <link rel="stylesheet" href="crud.css">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
 </head>
 <body>
     <div class="full-screen-container">
